...
            fragmentFactory = fragmentFactory,
            fragmentClassName = when (opened.format) {
                BookFormat.EPUB -> EpubNavigatorFragment::class.java.name
                BookFormat.PDF -> PdfNavigatorFragment::class.java.name
                else -> error("Unsupported reader format")
            },
            tag = readerFragmentTag(
                bookId = opened.book.id,
                readerSessionInstanceId = readerSessionInstanceId
            ),
            onNavigatorReady = onNavigatorReady,
            onDisposePublication = onDisposePublication,
            modifier = Modifier.fillMaxSize()
...
